# Vlinders-Server

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Spec/: 01-架构设计.md  02-技术选型.md  03-vLLM集成方案.md  04-Agent编排系统.md  05-工具执行引擎.md  06-代码分析引擎.md  07-部署运维指南.md  README.md
configs/: models.yaml
docs/: 00-MASTER_PLAN.md  01-Security-Framework.md  02-User-Service-Framework.md  03-Inference-Framework.md  04-Management-Framework.md  05-API-Specification.md  06-Database-Schema.md  07-Kubernetes-Deployment.md  08-Operations-Runbook.md  README.md
examples/: client_usage.py
scripts/: download_models.py  start.sh  test_api.py
tests/: conftest.py
tests/unit/: test_basic.py
vlinders_server/: __init__.py  auth.py  cache.py  config.py  database.py  main.py  ratelimit.py
vlinders_server/api/: health.py  internal.py
vlinders_server/inference/: __init__.py
vlinders_server/utils/: __init__.py
